--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <p>But I know other programming and scripting languages as well.</p>
     <p>I hold a master degree in Computer Science. During that time I've also published a <a
             href="http://wwwusers.di.uniroma1.it/~scozzafava/pubs/biopen.pdf">paper</a> on biometric systems.</p>
-    <p>Lately I like to spend my time reading papers or programming in Rust.</p>
+    <p>Lately, I like to spend my free time reading papers or programming side projects in Rust.</p>
     <p>Here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
     <p>You can reach out to me via email using x@y where x is "me" and y is this domain.</p>
 </article>
