--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Federico Ponzi's home page</title>
     <meta name="description" content="You've found Federico Ponzi's home page">
     <meta name="author" content="Federico Ponzi">
