--- a/index.html
+++ b/index.html
@@ -1,82 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Federico Ponzi's home page</title>
-    <meta name="description" content="You've found Federico Ponzi's home page">
-    <meta name="author" content="Federico Ponzi">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-    <style>
-        html {
-            box-sizing: border-box;
-            font-size: 16px;
-            font-family: 'Nunito', sans-serif;
-            letter-spacing: 1.3px;
-            background-color: #efefefef;
-        }
-        *, *:before, *:after {
-            box-sizing: inherit;
-        }
-        body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-            margin: 0;
-            padding: 0;
-            font-weight: normal;
-        }
-        article {
-            padding: 100px 50px;
-            width: auto;
-            box-sizing: border-box;
-            position: relative;
-            margin: 0 auto;
-        }
-        p {
-            padding-bottom: 10px;
-            padding-top: 10px;
-        }
-        h1 {
-            font-size: 2em;
-        }
-        h2 {
-            font-size: 1.6em;
-        }
-        ul {
-           padding-left: 25px;
-           padding-bottom: 5px;
-        }
-  </style>
-</head>
-<body>
-<article>
-    <h2>You found <strong>Federico Ponzi</strong>'s home page!</h2>
-    <p>I'm a computer scientist and a software engineer interested in the intersection of:</p>
-    <ul>
-        <li>Distributed Systems</li>
-        <li>Operating Systems</li>
-        <li>Type theory and Functional Programming</li>
-        <li>Category Theory</li>
-    </ul>
-    <p>I currently work as a Systems Development Engineer at <a href="https://aws.amazon.com/">AWS</a>. In the past, I've also worked in the following
-        roles:</p>
-    <ul>
-        <li><a href="https://immobiliare.it">Intern Big Data Engineer</a></li>
-        <li>Freelance full stack developer</li>
-        <li><a href="https://altran.com">Big Data Engineer</a></li>
-        <li><a href="https://actyx.com">Distributed Systems Engineer</a></li>
-    </ul>
-    <p>My (currently) favorite programming languages are:</p>
-    <ul>
-        <li>Rust</li>
-        <li>Java</li>
-        <li>Python</li>
-    </ul>
-    <p>But I know other programming and scripting languages as well.</p>
-    <p>I hold a master degree in Computer Science. During that time I've also published a <a
-            href="http://wwwusers.di.uniroma1.it/~scozzafava/pubs/biopen.pdf">paper</a> on biometric systems.</p>
-    <p>Lately, I like to spend my free time reading papers or programming side projects in Rust.</p>
-    <p>Here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
-    <p>You can reach out to me via email using x@y where x is "me" and y is this domain.</p>
-</article>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width">
+		<title>Federico Ponzi's home page</title>
+		<meta name="description" content="You've found Federico Ponzi's home page">
+		<meta name="author" content="Federico Ponzi">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+		<style>
+html {
+	box-sizing: border-box;
+	font-size: 16px;
+	font-family: 'Nunito', sans-serif;
+	letter-spacing: 1.3px;
+	background-color: #efefefef;
+}
+*, *:before, *:after {
+	box-sizing: inherit;
+}
+	body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+		margin: 0;
+		padding: 0;
+		font-weight: normal;
+	}
+	article {
+		padding: 100px 50px;
+		width: auto;
+		box-sizing: border-box;
+		position: relative;
+		margin: 0 auto;
+	}
+	p {
+		padding-bottom: 10px;
+		padding-top: 10px;
+	}
+	h1 {
+		font-size: 2em;
+	}
+	h2 {
+		font-size: 1.6em;
+	}
+	ul {
+		padding-left: 25px;
+		padding-bottom: 5px;
+	}
+		</style>
+	</head>
+	<body>
+		<article>
+			<h2>You found <strong>Federico Ponzi</strong>'s home page!</h2>
+			<p>I'm a computer scientist and a software engineer interested in the intersection of:</p>
+			<ul>
+				<li>Distributed Systems</li>
+				<li>Operating Systems</li>
+				<li>Type theory and Functional Programming</li>
+				<li>Category Theory</li>
+			</ul>
+			<p>I currently work as a Systems Development Engineer at <a href="https://aws.amazon.com/">AWS CloudFront</a> on Regional Edge Caches. In chronological order, I've also worked in the following roles:</p>
+			<ul>
+				<li>(Internship) Big Data Engineer @ <a href="https://immobiliare.it">Immobiliare.it</a></li>
+				<li>Freelance Mobile and Web developer</li>
+				<li>Big Data Engineer @ <a href="https://altran.com">Altran</a></li>
+				<li>Distributed Systems Engineer @ <a href="https://actyx.com">Actyx</a></li>
+				<li>Systems Development Engineer @ <a href="https://aws.amazon.com">Aws TechOPS team (Incident management for amazon.com)</a></li>
+			</ul>
+			<p>Currently, my favorite programming languages are:</p>
+			<ul>
+				<li>Rust</li>
+				<li>Java</li>
+				<li>Python</li>
+			</ul>
+			<p>But I know other programming and scripting languages as well.</p>
+			<p>I hold a master degree in Computer Science. During my studies, I've also published a <a href="http://wwwusers.di.uniroma1.it/~scozzafava/pubs/biopen.pdf">paper</a> on biometric systems.</p>
+			<p>Lately, I like to spend my free time reading papers/books, programming side projects in Rust, physical exercising or somewhere hiking.</p>
+			<p>Here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
+			<p>You can reach out via email using x@y where x is "me" and y is this domain.</p>
+		</article>
+	</body>
 </html>
