--- a/index.html
+++ b/index.html
@@ -50,31 +50,19 @@ html {
 	<body>
 		<article>
 			<h2>You found <strong>Federico Ponzi</strong>'s home page!</h2>
-			<p>I'm a computer scientist and a software engineer interested in the intersection of:</p>
+			<p>I'm a computer scientist and a software engineer interested in the intersection of Distributed Systems and Operating Systems.
+			<p>I currently work as a <strong>Systems Development Engineer</strong> at <a href="https://aws.amazon.com/cloudfront/" title="AWS CloudFront">AWS CloudFront</a> on Regional Edge Caches. In chronological order, I've also worked in the following roles:</p>
 			<ul>
-				<li>Distributed Systems</li>
-				<li>Operating Systems</li>
-				<li>Type theory and Functional Programming</li>
-				<li>Category Theory</li>
-			</ul>
-			<p>I currently work as a Systems Development Engineer at <a href="https://aws.amazon.com/">AWS CloudFront</a> on Regional Edge Caches. In chronological order, I've also worked in the following roles:</p>
-			<ul>
-				<li>(Internship) Big Data Engineer @ <a href="https://immobiliare.it">Immobiliare.it</a></li>
-				<li>Freelance Mobile and Web developer</li>
+				<li>Big Data Engineer @ <a href="https://immobiliare.it">Immobiliare.it</a></li>
+				<li>Freelance Mobile and Web developer (for different customers)</li>
 				<li>Big Data Engineer @ <a href="https://altran.com">Altran</a></li>
-				<li>Distributed Systems Engineer @ <a href="https://actyx.com">Actyx</a></li>
+				<li>Distributed Systems Engineer @ <a href="https://actyx.com">Actyx AG</a></li>
 				<li>Systems Development Engineer @ <a href="https://aws.amazon.com">Aws TechOPS team (Incident management for amazon.com)</a></li>
 			</ul>
-			<p>Currently, my favorite programming languages are:</p>
-			<ul>
-				<li>Rust</li>
-				<li>Java</li>
-				<li>Python</li>
-			</ul>
-			<p>But I know other programming and scripting languages as well.</p>
+			<p>My currently favorite programming languages are Rust, Java, Python. As I try to use the best tool for the job, I also know other programming and scripting languages as well.</p>
 			<p>I hold a master degree in Computer Science. During my studies, I've also published a <a href="http://wwwusers.di.uniroma1.it/~scozzafava/pubs/biopen.pdf">paper</a> on biometric systems.</p>
-			<p>Lately, I like to spend my free time reading papers/books, programming side projects in Rust, physical exercising or somewhere hiking.</p>
-			<p>Here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
+			<p>Lately, I like to spend my free time reading papers/books, programming side projects in Rust, physical exercising or hiking.</p>
+			<p>To dig further, here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
 			<p>You can reach out via email using x@y where x is "me" and y is this domain.</p>
 		</article>
 	</body>
