--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@ html {
 				<li>Distributed Systems Engineer @ <a href="https://actyx.com">Actyx AG</a></li>
 				<li>Systems Development Engineer @ <a href="https://aws.amazon.com">Aws TechOPS team (Incident management for amazon.com)</a></li>
 			</ul>
-			<p>My currently favorite programming languages are Rust, Java, Python. As I try to use the best tool for the job, I also know other programming and scripting languages as well.</p>
-			<p>I hold a master degree in Computer Science. During my studies, I've also published a <a href="http://wwwusers.di.uniroma1.it/~scozzafava/pubs/biopen.pdf">paper</a> on biometric systems.</p>
+			<p>These days, my favorite programming languages are Rust, Java, Python. As I try to use the best tool for the job, I also know other programming and scripting languages as well.</p>
+			<p>I hold a master degree in Computer Science. During my studies, I've also published a <a title="Biopen–Fusing password choice and biometric interaction at presentation level" href="/pubs/biopen.pdf">paper</a> on biometric systems.</p>
 			<p>Lately, I like to spend my free time reading papers/books, programming side projects in Rust, physical exercising or hiking.</p>
 			<p>To dig further, here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
 			<p>You can reach out via email using x@y where x is "me" and y is this domain.</p>
 		</article>
 	</body>
 </html>
+
