--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ html {
 			<p>These days, my favorite programming languages are Rust, Java, Python. As I try to use the best tool for the job, I also know other programming and scripting languages as well.</p>
 			<p>I hold a master degree in Computer Science. During my studies, I've also published a <a title="Biopen–Fusing password choice and biometric interaction at presentation level" href="/pubs/biopen.pdf">paper</a> on biometric systems.</p>
 			<p>Lately, I like to spend my free time reading papers/books, programming side projects in Rust, physical exercising or hiking.</p>
-			<p>To dig further, here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
+			<p>To dig further, here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a rel="me" href="https://discuss.systems/@federicoponzi">Mastodon</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
 			<p>You can reach out via email using x@y where x is "me" and y is this domain.</p>
 		</article>
 	</body>
