link to aws doc for RECs

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ html {
 		<article>
 			<h2>You found <strong>Federico Ponzi</strong>'s home page!</h2>
 			<p>I'm a computer scientist and a software engineer interested in the intersection of Distributed Systems and Operating Systems.
-			<p>I currently work as a <strong>Software Development Engineer</strong> at <a href="https://aws.amazon.com/cloudfront/" title="AWS CloudFront">AWS CloudFront</a> on Regional Edge Caches. In chronological order, I've also worked in the following roles:</p>
+			<p>I currently work as a <strong>Software Development Engineer</strong> at <a href="https://aws.amazon.com/cloudfront/" title="AWS CloudFront">AWS CloudFront</a> on the <a href="https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/HowCloudFrontWorks.html#CloudFrontRegionaledgecaches">Regional Edge Caches</a>. In chronological order, I've also worked in the following roles:</p>
 			<ul>
 				<li>Big Data Engineer @ <a href="https://immobiliare.it">Immobiliare.it</a></li>
 				<li>Freelance Mobile and Web developer (for different customers)</li>
