add note to altran which was brought by capgemini

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ html {
 			<ul>
 				<li>Big Data Engineer @ <a href="https://immobiliare.it">Immobiliare.it</a></li>
 				<li>Freelance Mobile and Web developer (for different customers)</li>
-				<li>Big Data Engineer @ <a href="https://altran.com">Altran</a></li>
+				<li>Big Data Engineer @ <a href="https://altran.com">Altran spa</a> (now Capgemini spa)</li>
 				<li>Distributed Systems Engineer @ <a href="https://actyx.com">Actyx AG</a></li>
 				<li>Systems Development Engineer @ <a href="https://aws.amazon.com">Aws TechOPS team (Incident management for amazon.com)</a></li>
 			</ul>
