add link to the blog

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ html {
 			<p>Lately, I like to spend my free time reading papers/books, programming side projects in Rust, physical exercising or hiking.</p>
 			<p>To dig further, here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a rel="me" href="https://discuss.systems/@federicoponzi">Mastodon</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
 			<p>You can reach out via email using x@y where x is "me" and y is this domain.</p>
+			<p>Sometimes, I like to write articles for my <a href="https://blog.fponzi.me">blog</a>.
 		</article>
 	</body>
 </html>
