--- a/index.html
+++ b/index.html
@@ -51,14 +51,7 @@ html {
 		<article>
 			<h2>You found <strong>Federico Ponzi</strong>'s home page!</h2>
 			<p>I'm a computer scientist and a software engineer interested in the intersection of Distributed Systems and Operating Systems.
-			<p>I currently work as a <strong>Software Development Engineer</strong> at <a href="https://aws.amazon.com/cloudfront/" title="AWS CloudFront">AWS CloudFront</a> on the <a href="https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/HowCloudFrontWorks.html#CloudFrontRegionaledgecaches">Regional Edge Caches</a>. In chronological order, I've also worked in the following roles:</p>
-			<ul>
-				<li>Big Data Engineer @ <a href="https://immobiliare.it">Immobiliare.it</a></li>
-				<li>Freelance Mobile and Web developer (for different customers)</li>
-				<li>Big Data Engineer @ <a href="https://altran.com">Altran spa</a> (now Capgemini spa)</li>
-				<li>Distributed Systems Engineer @ <a href="https://actyx.com">Actyx AG</a></li>
-				<li>Systems Development Engineer @ <a href="https://aws.amazon.com">Aws TechOPS team (Incident management for amazon.com)</a></li>
-			</ul>
+			<p>I currently work as a <strong>Software Development Engineer</strong> at <a href="https://aws.amazon.com/cloudfront/" title="AWS CloudFront">AWS CloudFront</a> on the <a href="https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/HowCloudFrontWorks.html#CloudFrontRegionaledgecaches">Regional Edge Caches</a>. 
 			<p>These days, my favorite programming languages are Rust, Java, Python. As I try to use the best tool for the job, I also know other programming and scripting languages as well.</p>
 			<p>I hold a master degree in Computer Science. During my studies, I've also published a <a title="Biopen–Fusing password choice and biometric interaction at presentation level" href="/pubs/biopen.pdf">paper</a> on biometric systems.</p>
 			<p>Lately, I like to spend my free time reading papers/books, programming side projects in Rust, physical exercising or hiking.</p>
